# hacker-news-crawler

./: .gitignore  README.md  Untitled-1.html  run.py  vercel.json
.github/workflows/: javascript-tests.yaml  python-tests.yaml  vercel-deploy.yaml
back-end/: pyproject.toml
back-end/src/api/: di.py  main.py  setup.py
back-end/src/api/middleware/: spa_static_files.py
back-end/src/api/routers/: hackers_news_filter_request.py  hackers_news_response.py  hackers_news_router.py
back-end/src/contracts/: entries_scraping_service.py
back-end/src/models/: news_entry.py
back-end/src/services/filtering/: filtering_builder.py
back-end/src/services/news_entries_scraping/: html_entries_parser.py  news_entries_scraping_service.py
back-end/src/utils/: title_word_counter.py
back-end/test/: test_filtering_builder.py  test_mock_scrapping.py  test_scrapping.py  test_title_word_counter.py
front-end/: .prettierrc  index.html  jest.config.js  package-lock.json  package.json
front-end/src/: App.css  App.tsx  main.tsx
front-end/src/components/FilterSelector/: FilterSelector.test.tsx  FilterSelector.tsx
front-end/src/components/Header/: Header.css  Header.tsx
front-end/src/components/NewsList/: NewList.test.tsx  NewsList.tsx
front-end/src/pages/Entries/: Entries.css  Entries.tsx
front-end/src/types/: FilterType.ts  NewsEntry.ts
